--- a/src/components/Listing.astro
+++ b/src/components/Listing.astro
@@ -148,7 +148,7 @@ const {
 											: null
 										}
 									/>
-									<RecordRelated source={record} />
+									<!-- <RecordRelated source={record} /> -->
 								</article>
 							);
 						})}
