--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -30,7 +30,7 @@ const resolvedLink =
 	: !href && to ? (
 		typeof to === "object" && to.type === "project" ? `/${projectsListing.slug.current}/${to.slug.current}/`
 		: typeof to === "object" && to.type === "publication" ? `/${publicationsListing.slug.current}/${to.slug.current}/`
-		: typeof to === "object" && to.type === "news" ? `/${pressListing.slug.current}/#news-${to.slug.current}`
+		: typeof to === "object" && to.type === "news" ? `/${pressListing.slug.current}/#${to.slug.current}`
 		: typeof to === "object" && to.type === "press" ? to.url
 		: ((typeof to === "object" && to.type === "listing" && to.id === "homepage") || (typeof to === "string" && to === "homepage")) ? "/"
 		: ((typeof to === "object" && to.type === "listing" && to.id === "projectsListing") || (typeof to === "string" && to === "projectsListing")) ? `/${projectsListing.slug.current}/`
