--- a/src/components/Listing.astro
+++ b/src/components/Listing.astro
@@ -363,6 +363,7 @@ const {
 			text-wrap: balance;
 			row-gap: var(--record-inner-spacing);
 			background: var(--color-7);
+			scroll-margin-block-start: calc(var(--header-height) + var(--spacer-400));
 		}
 		.listing[data-density="1"] &,
 		.listing[data-density="2"] & {
