--- a/src/lib/types.astro
+++ b/src/lib/types.astro
@@ -30,6 +30,7 @@ export type SanityImageMetadataObject = {
 		};
 		extension: ImageFormat;
 	};
+	url: string;
 };
 
 export type RecordProps = ProjectProps | PublicationProps | NewsOrPressItemProps | StoryProps;
