--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -12,6 +12,12 @@ export type SiteSettingsProps = {
 	title: string;
 	description: string;
 	navigationItems: NavigationItemProps[];
+	image: {
+		url: string;
+		transformationQuery?: string;
+	};
+	keywords: string[]; 
+	analytics?: string;
 };
 
 const settings: SiteSettingsProps = await sanityClient.fetch(SiteSettingsGroqQuery);
@@ -19,6 +25,10 @@ const settings: SiteSettingsProps = await sanityClient.fetch(SiteSettingsGroqQue
 type Props = {
 	title: string;
 	description?: string;
+	image?: {
+		url: string;
+		transformationQuery?: string;
+	};
 	headerMode?: HeaderProps;
 	clearHeaderColor?: string;
 };
@@ -26,28 +36,52 @@ type Props = {
 const {
 	title,
 	description,
+	image,
 	headerMode,
 	clearHeaderColor,
 } = Astro.props;
+
+const pageTitle = [Astro.url.pathname === "/" ? null : title, settings.title]?.filter(Boolean)?.join(" • ");
+const pageAuthor = "Rana Beiruti";
+const pageDescription = description || settings.description;
+const pageKeywords = settings.keywords?.join(", ");
+const pageThemeColor = "#ffffff";
+const pageCanonicalUrl = Astro.url.href;
+const pageImage = image && image.url ? `${image.url}${image.transformationQuery || "?w=1200&h=630&fit=crop&auto=format"}` : [settings.image.url, settings.image.transformationQuery]?.filter(Boolean)?.join("");
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>{[title, settings.title]?.filter(Boolean)?.join(" • ")}</title>
-		<meta name="description" content={description || settings.description} />
-		<meta name="generator" content={Astro.generator} />
+		<title>{pageTitle}</title>
+		<meta name="author" content={pageAuthor} />
+		<meta name="description" content={pageDescription} />
+		<meta name="keywords" content={pageKeywords} />
+		<meta name="theme-color" content={pageThemeColor} />
+		<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+		<link rel="mask-icon" href="/mask-icon.svg" color="#000000" />
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover" />
-		<meta name="theme-color" content="#fafafa" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000" />
-		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+		<link rel="canonical" href={pageCanonicalUrl} />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content={settings.title} />
+		<meta property="og:url" content={pageCanonicalUrl} />
+		<meta property="og:title" content={title || settings.title} />
+		<meta property="og:description" content={pageDescription} />
+		<meta property="og:image" content={pageImage} />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:url" content={pageCanonicalUrl} />
+		<meta name="twitter:title" content={title || settings.title} />
+		<meta name="twitter:description" content={pageDescription} />
+		<meta name="twitter:image" content={pageImage} />
+		<Fragment set:html={settings.analytics} />
+		<meta name="generator" content={Astro.generator} />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 	</head>
 	<body>
-		<NavigationMenu title={settings.title} items={settings.navigationItems} mode={headerMode} color={clearHeaderColor} />
+		<NavigationMenu title={settings.title} items={settings.navigationItems} mode={headerMode} color={headerMode === "clear" && clearHeaderColor} />
 		<main>
 			<slot />
 		</main>
@@ -61,12 +95,6 @@ const {
 		flex-flow: column nowrap;
 		min-height: 100vh;
 		min-height: 100dvh;
-		--header-height: calc(1em * 4);
-		--header-offset: var(--spacer-400);
-		--body-inline-spacing: calc(var(--spacer-400) + env(safe-area-inset-left, 0px));
-		@media (max-width: 640px) {
-			--header-offset: 0px;
-		}
 	}
 	main {
 		flex: 1;
