--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,12 +3,24 @@ import Main from "@layouts/Main.astro";
 ---
 
 <Main title="404">
-	<h1 style="margin: auto; line-height: 1.3;">
-		<span>
-			404
-		</span>
-		<span style="display: block;">
-			Page not found
-		</span>
-	</h1>
+	<div class="content">
+		<div>
+			<p>
+				404
+			</p>
+			<p>
+				Page not found
+			</p>
+		</div>
+	</div>
 </Main>
+
+<style lang="scss">
+	.content {
+		flex: 1;
+		display: flex;
+		align-items: flex-end;
+		justify-content: flex-end;
+		padding-block: calc(var(--spacer-400) * 1);
+	}
+</style>
