--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -68,12 +68,12 @@ const pageImage = image && image.url ? `${image.url}${image.transformationQuery 
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content={settings.title} />
 		<meta property="og:url" content={pageCanonicalUrl} />
-		<meta property="og:title" content={title || settings.title} />
+		<meta property="og:title" content={Astro.url.pathname === "/" ? settings.title : pageTitle} />
 		<meta property="og:description" content={pageDescription} />
 		<meta property="og:image" content={pageImage} />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:url" content={pageCanonicalUrl} />
-		<meta name="twitter:title" content={title || settings.title} />
+		<meta name="twitter:title" content={Astro.url.pathname === "/" ? settings.title : pageTitle} />
 		<meta name="twitter:description" content={pageDescription} />
 		<meta name="twitter:image" content={pageImage} />
 		<Fragment set:html={settings.analytics} />
