--- a/src/components/RichText.astro
+++ b/src/components/RichText.astro
@@ -76,6 +76,7 @@ export function portableTextToPlainText(source: string | TypedObject[]) {
 		& {
 			line-height: 1.3;
 			text-wrap: pretty;
+			text-wrap: balance;
 		}
 		& + .rich-text {
 			margin-block-start: var(--spacer-100);
